kubernetes/canary-release/deployment_blue.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid-blue
  labels:
    app: grid-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grid-blue
  template:
    metadata:
      labels:
        app: grid-blue
    spec:
      containers:
      - name: app
        image: breizhcamp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
