kubernetes/canary-release/service_green.yml
kind: Service
apiVersion: v1
metadata:
  name: grid-green
spec:
  selector:
    app: grid-green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
