kubernetes/canary-release/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service-weights: |
      grid-blue: 100
      grid-green: 0
  name: grid
spec:
  rules:
  - host: breizhcamp.tes
    http:
      paths:    
       - backend:
          serviceName: grid-green
          servicePort: 80
         path: /  
       - backend:
          serviceName: grid-blue
          servicePort: 80 
         path: /
status:
  loadBalancer: {}
